fixing issue related to bootstrap not loaded in mydata and shared pages

--- a/tardis/tardis_portal/templates/tardis_portal/my_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/my_data.html
@@ -66,4 +66,5 @@
 
 <input type="hidden" id="exps-expand-accordion" value="{{ exps_expand_accordion }}">
 {% render_bundle 'tardis_portal_my_data' %}
+    {% render_bundle 'main' %}
 {% endblock %}
