Use bootstrap-3-typeahead instead of jquery-ui's autocomplete

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
@@ -9,7 +9,7 @@
     <label class="control-label col-md-2 " for="id_adduser">User</label>
       <div class="col-md-4" style="max-width: 250px;">
         <input type="text" name="adduser" id="id_adduser"
-               class="usersuggest form-control ui-autocomplete-input"
+               class="usersuggest form-control"
                maxlength="100" autocomplete="off">
       </div>
   </div>
