--- a/assets/js/app/search/search.css
+++ b/assets/js/app/search/search.css
@@ -6,13 +6,17 @@ app {
     margin-top: -1px;
     padding: 6px 20px;
 }
-
 .input-group-btn .btn-group {
     display: flex !important;
 }
-
-.btn-group .btn {
+.form-control{
+    border-radius: 0px;
+}
+.btn {
     border-radius: 0;
+    margin-top: -2px;
+}
+.btn-group .btn {
     margin-left: -1px;
 }
 
@@ -20,7 +24,13 @@ app {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+.btn-primary {
+    border-radius: 0px;
 
+}
+form#adv-search-form button[type="submit"] {
+    margin-top: 4px;
+}
 .btn-group .form-horizontal .btn[type="submit"] {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -35,12 +45,19 @@ app {
     position: inherit;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+    margin-bottom: 2px;
 }
 
 @media screen and (min-width: 768px) {
     #adv-search {
         width: 500px;
-        margin: 0 auto;
+        margin-left: 25%;
+
+    }
+    #simple-search {
+        width: 500px;
+        margin-left: 25%;
+        display: inline-block;
     }
 
     .dropdown.dropdown-lg {
