adding box shadow to results

--- a/assets/js/app/search/search.css
+++ b/assets/js/app/search/search.css
@@ -226,3 +226,11 @@ form#adv-search-form button[type="submit"] {
 .react-datepicker__input-container :focus {
     outline: none;
 }
+
+.panel-body {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#exTab1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
