--- a/tardis/apps/search_v2/templates/searchV2.html
+++ b/tardis/apps/search_v2/templates/searchV2.html
@@ -3,6 +3,22 @@
 {% load bleach_tag %}
 
 {% block content %}
+    <script>
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== "") {
+                var cookies = document.cookie.split(";");
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    if (cookie.substring(0, name.length + 1) === (name + "=")) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+    </script>
     <div id="app"></div>
     <div>
     </div>
