--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -20,6 +20,7 @@
 <input type="hidden" id="experiment-id" value="{{ experiment.id }}">
 <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
 {% render_bundle 'tardis_portal_view_experiment_init' %}
+{% render_bundle 'tardis_portal_view_experiment_share' %}
 {% endblock %}
 
 {% block content %}
