--- a/assets/js/app/search/search.css
+++ b/assets/js/app/search/search.css
@@ -18,7 +18,6 @@ app {
 .btn-group .btn {
     margin-left: -1px;
 }
-
 button.btn.btn-default.dropdown-toggle {
     margin-left: -35px;
 }
@@ -29,7 +28,15 @@ button.btn.btn-default.dropdown-toggle {
 .btn-primary {
     border-radius: 0px;
 }
+.badge {
+    margin-left: 5px;
+    border-radius: 10px;
+}
+.panel{
+    border: none;
+    box-shadow: none;
 
+}
 form#adv-search-form button[type="submit"] {
     margin-top: 4px;
 }
@@ -229,18 +236,8 @@ form#adv-search-form button[type="submit"] {
     outline: none;
 }
 
-.panel-body {
-    transition: box-shadow .3s;
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
-}
-.panel-body:hover {
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
-    box-shadow: 0 0 11px rgba(33,33,33,.2);
-}
-
 #exTab1 {
     padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .fa {
     margin-right: 10px;
