changes related to displaying search results
added badge for Institution, date created, created by

--- a/assets/js/app/search/search.css
+++ b/assets/js/app/search/search.css
@@ -35,6 +35,8 @@ button.btn.btn-default.dropdown-toggle {
 .panel{
     border: none;
     box-shadow: none;
+    margin-bottom: 0px;
+
 
 }
 form#adv-search-form button[type="submit"] {
