--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -165,8 +165,7 @@
             {% if search_form %}
             <form id="searchbox" method="get"
                 class="navbar-form pull-right"
-                role="search"
-                action="{% url 'haystack_search' %}">
+                role="search">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search" id="id_q" autocomplete="off" name="q"
                        {% if query %} value="{{ query }}" {% endif %}/>
