--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
@@ -3,7 +3,7 @@
       <div class="row-fluid group">
         <strong>
           <a href="{% url 'tardis.tardis_portal.views.retrieve_group_userlist_readonly' group.id %}" class="members-hidden member_list_user_toggle fg-button small fg-button-icon-solo ui-corner-all">
-            <i class="fa fa-folder-close"></i>
+            <i class="fa fa-folder"></i>
             {{ group.name }}
           </a>
         </strong>
