--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -165,7 +165,7 @@
             {% if search_form %}
             <form id="searchbox" method="get"
                 class="navbar-search pull-right"
-                action="{% url 'search_v2' %}">
+                action="{% url 'search' %}">
               <input id="id_q" autocomplete="off" name="q"
                    type="text" class="search-query" placeholder="Search"
                    {% if query %} value="{{ query }}" {% endif %}/>
