Update clipboard.js to v2.0.4

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_tokens.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_tokens.html
@@ -1,6 +1,6 @@
 {% load static from staticfiles %}
 <script type="text/javascript">
-    var clipboard = new Clipboard('.btn.clipboard');
+    var clipboard = new ClipboardJS('.btn.clipboard');
     {% comment %}
     clipboard.on('success', function(e) {
         console.log(e);
