--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -164,7 +164,7 @@
             </ul>
             {% if search_form %}
             <form id="searchbox" method="get"
-                class="navbar-search pull-right"
+                class="navbar-form pull-right"
                 action="{% url 'search' %}">
                 <div class="form-group">
                   <input id="id_q" autocomplete="off" name="q"
