Fix issue where Exp Metadata wasn't saving due to submit button being outside of form

--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -39,7 +39,10 @@
   <div class="modal-body"></div>
 
   <div class="modal-footer">
-    <button class="submit-button btn btn-success">
+    <button id="add_edit_metadata_save_button"
+            class="submit-button btn btn-success"
+            type="submit"
+            form="add_metadata_form">
       <i class="fa fa-ok"></i>
       Save
     </button>
