Cancel button doesn't need to be of type "submit"

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
@@ -39,7 +39,7 @@
 
     <div class="form-group">
       <footer class="col-md-12 text-right">
-        <button type="submit" class="cancel-button btn btn-default"
+        <button type="button" class="cancel-button btn btn-default"
                 data-dismiss="modal">
           <i class="fa fa-close"></i>
           Cancel
