Added internal_id and project_id fields

--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -10,6 +10,8 @@
       {% load bootstrap %}
       <fieldset>
         {{ form.title|bootstrap }}
+	{{ form.internal_id|bootstrap_horizontal }}
+	{{ form.project_id|bootstrap_horizontal }}
         {{ form.authors|bootstrap }}
         {{ form.institution_name|bootstrap }}
         {{ form.description|bootstrap }}
