--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
@@ -10,6 +10,8 @@
   {% include "tardis_portal/ajax/add_group_result.html" %}
   {% endwith %}
 {% endfor %}
+  <div id="group-sharing-messages">
+  </div>
 </div> <!-- groups -->
 <form>
   <div class="form-group">
