--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user.html
@@ -6,6 +6,8 @@
   {% include "tardis_portal/ajax/add_user_result.html" %}
   {% endwith %}
 {% endfor %}
+  <div id="user-sharing-messages">
+  </div>
 </div> <!-- users -->
 <p>
 	<h3>Add new user</h3>
