--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -152,7 +152,7 @@
 
 <script type="text/javascript">
     $(function () {
-        $('.archived-file').tooltip({'title': "This file is archived.<br/>Press <b>Retrieve</b> button above file list"});
+        $('.archived-file').tooltip({'title': "This file is archived."});
         $('a.archived-file').on("click", function(e) {
             e.preventDefault();
         });
