--- a/tardis/apps/push_to/templates/destination_selector.html
+++ b/tardis/apps/push_to/templates/destination_selector.html
@@ -1,11 +1,12 @@
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html ng-app="push-to">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Push to</title>
-    <script type="application/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'angular/angular.min.js' %}"></script>
+    {% render_bundle 'main' %}
+    {% render_bundle 'tardis_portal_facility_view' %}
     <script type="application/javascript" src="{% static 'push-to/typeahead.bundle.js' %}"></script>
     <link href="{% static 'push-to/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <script type="application/javascript">
@@ -27,6 +28,5 @@
     </body>
 {% endverbatim %}
 <script type="application/javascript" src="{% static 'push-to/angular-typeahead.js' %}"></script>
-<script type="application/javascript" src="{% static 'angular-resource/angular-resource.min.js' %}"></script>
 <script type="application/javascript" src="{% static 'push-to/push-to.js' %}"></script>
 </html>
