--- a/tardis/apps/push_to/templates/host_list.html
+++ b/tardis/apps/push_to/templates/host_list.html
@@ -1,10 +1,11 @@
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html ng-app="push-to">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Push to</title>
-    <script type="text/javascript" src="{% static 'angular/angular.min.js' %}"></script>
+    {% render_bundle 'tardis_portal_facility_view' %}
     <link href="{% static 'push-to/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <script type="text/javascript">
         var accessible_hosts_url = '{{ accessible_hosts_url }}';
