Add comment explaining why facility bundle is loaded in Push To templates

--- a/tardis/apps/push_to/templates/destination_selector.html
+++ b/tardis/apps/push_to/templates/destination_selector.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Push to</title>
     {% render_bundle 'main' %}
+    {# The tardis_portal_facility_view bundle provides AngularJS #}
     {% render_bundle 'tardis_portal_facility_view' %}
     <script type="application/javascript" src="{% static 'push-to/typeahead.bundle.js' %}"></script>
     <link href="{% static 'push-to/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
