--- a/tardis/apps/push_to/templates/host_list.html
+++ b/tardis/apps/push_to/templates/host_list.html
@@ -5,6 +5,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Push to</title>
+    {# The tardis_portal_facility_view bundle provides AngularJS #}
     {% render_bundle 'tardis_portal_facility_view' %}
     <link href="{% static 'push-to/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <script type="text/javascript">
