Ensure that the "filename-search-text" input element can access the filenameSearchHandler function.

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -36,6 +36,7 @@
 
 <p id="filename-search" class="js-required" data-action="/ajax/datafile_list/{{dataset.id}}/" data-method="GET" style="padding: 5px 0 5px 10px; border: 1px solid #DDDDDD;">
 <input id="filename-search-text" style="width: 95%; font-size: 100%; margin-top: 5px;"
+    autocomplete="off"
     title='Enter part or all of a filename, then press enter. e.g. Enter "175" to show only files containing "175" in their filename.'
     placeholder='Search: Enter part or all of a filename, then press enter.'
     type="text"
