--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_user_list.html
@@ -26,7 +26,7 @@
 
   <div class="form-group">
     <div class="col-md-offset-2 col-md-4">
-      <input type="hidden" name="group_id" class="group_id" value="1">
+      <input type="hidden" name="group_id" class="group_id" value="{{group_id}}">
       <button type="submit" class="btn btn-primary">
         <i class="fa fa-plus"></i>
         Add User to Group
