--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -35,9 +35,9 @@
               <div class="accordion-heading" data-parent="#private-experiments">
                 <div id="private-toggle-{{exp.id}}" class="accordion-toggle private-experiment" data-toggle="collapse"  data-parent="#private-experiments">
                   <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-                  <strong><a class="explink pull-left"
+                  <strong><a class="pull-left"
                              href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-                  <ul class="nav nav-pills">
+                  <ul class="nav nav-pills badgelist">
                     <li class="ml-auto mr-2">{{ exp|experiment_public_access_badge }}</li>
                     <li class="mr-2">{{ exp|experiment_datafiles_badge }}</li>
                     <li class="mr-2">{{ exp|experiment_datasets_badge }}</li>
@@ -89,7 +89,7 @@
           <div class="accordion-heading" data-parent="#public-experiments">
             <div id="public-toggle-{{exp.id}}" class="accordion-toggle public-experiment" data-toggle="collapse"  data-parent="#public-experiments">
               <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-              <strong><a class="pull-left explink"
+              <strong><a class="pull-left"
                          href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
               <ul class="nav nav-pills badgelist">
                 <li class="ml-auto mr-2">{{ exp|experiment_datafiles_badge }}</li>
